library:  enable native access during Junit testing